# agentic-data-platform

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
adp/: cli.py  config.py  dbt_runner.py  planner.py  platform.py  tools.py  warehouse.py
adp/econ/: README.md  __init__.py  classify.py  pipeline.py  reference.py  samples.py  taxonomy.py  wildchat.py
data/econ/: conversations.csv
tests/: test_dbt.py  test_econ.py
transform/: .user.yml  dbt_project.yml  profiles.yml
transform/macros/: generate_schema_name.sql
transform/models/marts/: _models.yml  county_quarter_panel.sql
transform/models/staging/: _sources.yml  stg_fema_policies.sql  stg_hmda_loans.sql  stg_property_sales.sql
transform/tests/: assert_panel_grain_unique.sql
